--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10919,9 +10919,98 @@ body {
   max-width: 1366px;
   height: 100%;
   justify-content: center;
-  padding: 2em 5em;
+  padding: 0 5em 2em 5em;
   width: 100%;
   margin: 0 auto;
+}
+
+.topnav {
+  height: 45px;
+  background-color: #525050;
+  overflow: hidden;
+}
+
+.topnav ul {
+  float: right;
+}
+
+.topnav ul li {
+  display: inline;
+  padding: 14px 16px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.topnav ul li:hover {
+  background-color: #a9a9a9;
+  color: white;
+}
+
+.topnav ul li a {
+  padding: 6px 0;
+  color: #fff;
+  text-decoration: none;
+  font-size: 12px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  border-bottom: 1px solid #a9a9a9;
+}
+
+.topnav ul li a:hover {
+  border-bottom: 1px solid #303030;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child),
+  .dropdown .dropbtn {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+    cursor: pointer;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .topnav.responsive {
+    float: none;
+  }
+
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
 }
 
 .action-bar > ul {
