--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,7 @@ $text-color: #000000;
 $text-color-2: #d61f1f;
 $text-color-3: #303030;
 $border-color: #666;
+$navbar-color: #525050;
 
 * {
     margin: 0;
@@ -36,11 +37,88 @@ body {
     max-width: 1366px;
     height: 100%;
     justify-content: center;
-    padding: 2em 5em;
+    padding: 0 5em 2em 5em;
     width: 100%;
     margin: 0 auto;
 }
 
+// navbar
+.topnav {
+    height: 45px;
+    background-color: $navbar-color;
+    overflow: hidden;
+    ul {
+        float: right;
+        li {
+            display: inline;
+            padding: 14px 16px;
+            text-align: center;
+            cursor: pointer;
+            &:hover {
+                background-color: $liHover;
+                color: white;
+            }
+            a {
+                padding: 6px 0;
+                color: $backgroundColor;
+                text-decoration: none;
+                font-size: 12px;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+                border-bottom: 1px solid $liHover;
+                &:hover {
+                    border-bottom: 1px solid $text-color-3;
+                }
+            }
+        }
+    }
+    .icon {
+        display: none;
+    }
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child),
+    .dropdown .dropbtn {
+        display: none;
+    }
+    .topnav a.icon {
+        float: right;
+        display: block;
+        cursor: pointer;
+    }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: relative;
+    }
+    .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    .topnav.responsive {
+        float: none;
+    }
+    .topnav.responsive {
+        position: relative;
+    }
+    .topnav.responsive {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
+}
+
+// action bar
 .action-bar > ul {
     text-align: center;
     li {
@@ -68,8 +146,8 @@ body {
             border: 1px solid $liHover;
             border-right: none;
             border-left: none;
-            background-color: rgba(0,0,0,0);
-            
+            background-color: rgba(0, 0, 0, 0);
+
             &:after {
                 content: "";
                 color: $border-color;
@@ -81,7 +159,7 @@ body {
                 width: 11px;
                 background-image: url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='angle-down' class='svg-inline--fa fa-angle-down fa-w-10' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='currentColor' d='M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z'%3E%3C/path%3E%3C/svg%3E");
                 background-repeat: no-repeat;
-                background-position: 50%; 
+                background-position: 50%;
             }
             &:focus {
                 outline: 0;
@@ -97,17 +175,16 @@ body {
                 background-repeat: no-repeat;
                 background-position: 50%;
             }
-           
+
             .selection-text {
                 padding-right: 8px;
-                letter-spacing: .3px;
+                letter-spacing: 0.3px;
                 vertical-align: middle;
                 min-height: 18px;
                 max-height: 100%;
                 overflow: hidden;
             }
         }
-        
     }
 }
 
@@ -291,7 +368,7 @@ footer {
 .footer-secondary {
     #copyright {
         margin: 1em 0;
-        padding: .2em;
+        padding: 0.2em;
         text-align: center;
         text-transform: uppercase;
         font-size: 11.2px;
