--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10912,116 +10912,137 @@ html {
 
 body {
   background-color: #fff;
-  margin: 0 0 auto;
+  margin: 0 auto;
 }
 
 .wrapper {
-  max-width: 1366px;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   padding: 0 5em 2em 5em;
   width: 100%;
   margin: 0 auto;
 }
 
-.topnav {
-  height: 45px;
-  background-color: #525050;
-  overflow: hidden;
+nav {
+  background: #525050;
+  height: 56px;
+  width: 100%;
 }
 
-.topnav ul {
-  float: right;
-}
-
-.topnav ul li {
-  display: inline;
-  padding: 14px 16px;
-  text-align: center;
-  cursor: pointer;
-}
-
-.topnav ul li:hover {
-  background-color: #a9a9a9;
-  color: white;
-}
-
-.topnav ul li a {
-  padding: 6px 0;
+label.logo {
   color: #fff;
-  text-decoration: none;
-  font-size: 12px;
-  letter-spacing: 3px;
+  font-size: 18px;
+  line-height: 56px;
+  padding: 0 100px;
+  font-weight: bold;
+}
+
+nav ul {
+  float: right;
+  margin-right: 20px;
+}
+
+nav ul li {
+  display: inline-block;
+  line-height: 56px;
+  margin: 0 5px;
+}
+
+nav ul li a {
+  color: #fff;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  letter-spacing: 2px;
   text-transform: uppercase;
-  border-bottom: 1px solid #a9a9a9;
 }
 
-.topnav ul li a:hover {
-  border-bottom: 1px solid #303030;
+a:hover {
+  background: #666;
+  transition: 0.5s;
 }
 
-.topnav .icon {
+.checkbtn {
+  font-size: 30px;
+  color: #fff;
+  float: right;
+  line-height: 56px;
+  margin-right: 40px;
+  cursor: pointer;
   display: none;
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+#check {
+  display: none;
+}
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child),
-  .dropdown .dropbtn {
-    display: none;
+@media (max-width: 952px) {
+  label.logo {
+    font-size: 12px;
+    padding-left: 50px;
   }
 
-  .topnav a.icon {
-    float: right;
-    display: block;
-    cursor: pointer;
+  nav ul li a {
+    font-size: 16px;
+    letter-spacing: 1px;
   }
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative;
-  }
-
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  .topnav.responsive a {
-    float: none;
+@media (max-width: 858px) {
+  .checkbtn {
     display: block;
-    text-align: left;
   }
 
-  .topnav.responsive {
-    float: none;
-  }
-
-  .topnav.responsive {
-    position: relative;
-  }
-
-  .topnav.responsive {
-    display: block;
+  ul {
+    position: fixed;
     width: 100%;
-    text-align: left;
+    height: 100vh;
+    background: #a9a9a9;
+    top: 56px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
+    z-index: 100;
+  }
+
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+
+  nav ul li a {
+    font-size: 12px;
+  }
+
+  a:hover {
+    background: none;
+    color: #666;
+  }
+
+  #check:checked ~ ul {
+    left: 0;
   }
 }
 
-.action-bar > ul {
-  text-align: center;
+.action-bar {
+  max-width: 1366px;
+  height: auto;
+  margin: 0 auto;
 }
 
-.action-bar > ul li {
+.action-bar ul {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.action-bar ul li {
+  width: auto;
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: auto;
   cursor: pointer;
   padding: 0.5em 2em;
   font-size: 14px;
@@ -11029,12 +11050,12 @@ body {
   letter-spacing: 2px;
 }
 
-.action-bar > ul li .selection-button {
+.action-bar ul li .selection-button {
   font-weight: 300;
   letter-spacing: 2px;
   color: #666;
-  line-height: 1.12;
-  text-align: left;
+  line-height: 1.12em;
+  text-align: center;
   padding: 3px 20px 3px 6px;
   position: relative;
   width: 100%;
@@ -11046,7 +11067,7 @@ body {
   background-color: rgba(0, 0, 0, 0);
 }
 
-.action-bar > ul li .selection-button:after {
+.action-bar ul li .selection-button:after {
   content: "";
   color: #666;
   position: absolute;
@@ -11060,24 +11081,24 @@ body {
   background-position: 50%;
 }
 
-.action-bar > ul li .selection-button:focus {
+.action-bar ul li .selection-button:focus {
   outline: 0;
 }
 
-.action-bar > ul li .selection-button:hover {
+.action-bar ul li .selection-button:hover {
   color: #d61f1f;
   border: 1px solid #d61f1f;
   border-right: none;
   border-left: none;
 }
 
-.action-bar > ul li .selection-button:hover:after {
+.action-bar ul li .selection-button:hover:after {
   background-image: url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='angle-down' class='svg-inline--fa fa-angle-down fa-w-10' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='%23d61f1f' d='M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z'%3E%3C/path%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: 50%;
 }
 
-.action-bar > ul li .selection-button .selection-text {
+.action-bar ul li .selection-button .selection-text {
   padding-right: 8px;
   letter-spacing: 0.3px;
   vertical-align: middle;
@@ -11087,6 +11108,7 @@ body {
 }
 
 .cards-section {
+  max-width: 1366px;
   grid-template-columns: repeat(auto-fit, minmax(330px, 370px));
   grid-gap: 0.4em;
   display: grid;
