--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10918,28 +10918,21 @@ body {
 .wrapper {
   height: 100vh;
   justify-content: center;
-  padding: 0 5em 2em 5em;
   width: 100%;
   margin: 0 auto;
 }
 
 nav {
-  background: #525050;
+  background: #2d2d2d;
   height: 56px;
   width: 100%;
-}
-
-label.logo {
-  color: #fff;
-  font-size: 18px;
-  line-height: 56px;
-  padding: 0 100px;
-  font-weight: bold;
+  padding: 0 5em 0 5em;
 }
 
 nav ul {
   float: right;
   margin-right: 20px;
+  margin-bottom: 0;
 }
 
 nav ul li {
@@ -10957,92 +10950,117 @@ nav ul li a {
   text-transform: uppercase;
 }
 
-a:hover {
+nav ul li a:hover {
   background: #666;
+  color: #f1f1f1;
   transition: 0.5s;
+  text-decoration: none;
 }
 
-.checkbtn {
+nav label.logo {
+  color: #fff;
+  font-size: 18px;
+  line-height: 56px;
+  padding: 0 100px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+nav .checkbtn {
   font-size: 30px;
   color: #fff;
   float: right;
   line-height: 56px;
-  margin-right: 40px;
+  margin-right: 5px;
   cursor: pointer;
   display: none;
 }
 
-#check {
+nav #check {
   display: none;
 }
 
-@media (max-width: 952px) {
-  label.logo {
-    font-size: 12px;
-    padding-left: 50px;
-  }
-
-  nav ul li a {
-    font-size: 16px;
-    letter-spacing: 1px;
-  }
-}
-
-@media (max-width: 858px) {
-  .checkbtn {
-    display: block;
-  }
-
-  ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #a9a9a9;
-    top: 56px;
-    left: -100%;
-    text-align: center;
-    transition: all 0.5s;
-    z-index: 100;
-  }
-
-  nav ul li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
-  }
-
-  nav ul li a {
-    font-size: 12px;
-  }
-
-  a:hover {
-    background: none;
-    color: #666;
-  }
-
-  #check:checked ~ ul {
-    left: 0;
-  }
-}
-
-.action-bar {
-  max-width: 1366px;
-  height: auto;
-  margin: 0 auto;
-}
-
-.action-bar ul {
+#top-bar {
   width: 100%;
+  height: 70px;
+  background: #a9a9a9;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#top-bar .search-bar {
+  width: 100%;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.action-bar ul li {
-  width: auto;
+#top-bar .search-bar input {
+  font-size: 1rem;
+  min-width: 340px;
+  width: 100%;
+  height: 36px;
+  padding: 16px;
+  margin: 0 20px;
+  border-radius: 25px;
+  border: none;
+  background: #f1f1f1;
+}
+
+#top-bar .search-bar input:focus {
+  outline: 0;
+}
+
+#top-bar .search-bar #search-icon {
+  position: absolute;
+  right: 40px;
+  border: none;
+}
+
+#top-bar .search-bar #search-icon:focus {
+  outline: 0;
+}
+
+#top-bar ul {
+  min-width: 300px;
+  padding-right: 0 20px 0 0;
+  margin: 0 20px;
+}
+
+#top-bar ul li {
+  font-size: 16px;
+  padding: 0 20px;
+  text-decoration: none;
   display: inline-flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  line-height: 50px;
+}
+
+#top-bar ul li i:hover {
+  color: white;
+  cursor: pointer;
+}
+
+.action-bar {
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 1em 0 3em 0;
+}
+
+.action-bar ul {
+  list-style-type: none;
+  width: 100%;
+  display: grid;
+  gap: 0.3em;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  grid-template-rows: auto;
+  align-content: center;
   justify-content: center;
+}
+
+.action-bar ul li {
   cursor: pointer;
   padding: 0.5em 2em;
   font-size: 14px;
@@ -11133,7 +11151,7 @@ a:hover {
 }
 
 .cards-section .card-item .product-description p {
-  color: #000000;
+  color: #2d2d2d;
   font-size: 14px;
   padding: 0.7em 0;
   margin: 0;
@@ -11143,7 +11161,7 @@ a:hover {
 .cards-section .card-item .old-price {
   text-decoration: line-through;
   font-size: 12px;
-  color: #000000;
+  color: #2d2d2d;
   padding: 0.2em;
 }
 
@@ -11289,7 +11307,7 @@ footer {
 .footer-newsletter form > span > input[type=submit] {
   position: absolute;
   padding: 0.6em;
-  background: #000000;
+  background: #2d2d2d;
   color: #fff;
   border: none;
   letter-spacing: 3px;
@@ -11324,5 +11342,54 @@ footer {
 .footer-secondary ul li a > span > i {
   color: black;
   cursor: pointer;
+}
+
+@media (max-width: 952px) {
+  nav label.logo {
+    font-size: 12px;
+    padding-left: 50px;
+  }
+
+  nav ul li a {
+    font-size: 16px;
+    letter-spacing: 1px;
+  }
+}
+
+@media (max-width: 858px) {
+  nav .checkbtn {
+    display: block;
+  }
+
+  nav ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #a9a9a9;
+    top: 56px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
+    z-index: 100;
+  }
+
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+
+  nav ul li a {
+    font-size: 16px;
+  }
+
+  nav ul li a:hover {
+    background: none;
+    color: #666;
+  }
+
+  nav #check:checked ~ ul {
+    left: 0;
+  }
 }
 
