--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,7 +10,7 @@
 $backgroundColor: #fff;
 $background-darker: #f1f1f1;
 $liHover: #a9a9a9;
-$text-color: #000000;
+$text-color: #2d2d2d;;
 $text-color-2: #d61f1f;
 $text-color-3: #303030;
 $border-color: #666;
@@ -36,176 +36,195 @@ body {
 .wrapper {
     height: 100vh;
     justify-content: center;
-    padding: 0 5em 2em 5em;
+    // padding: 0 5em 2em 5em;
     width: 100%;
     margin: 0 auto;
 }
 
 // navbar
-  nav{
-    background: $navbar-color;
+nav {
+    background: $text-color;
     height: 56px;
     width: 100%;
-  }
-  label.logo{
-    color: $backgroundColor;
-    font-size: 18px;
-    line-height: 56px;
-    padding: 0 100px;
-    font-weight: bold;
-  }
-  nav ul{
-    float: right;
-    margin-right: 20px;
-  }
-  nav ul li{
-    display: inline-block;
-    line-height: 56px;
-    margin: 0 5px;
-  }
-  nav ul li a{
-    color:$backgroundColor;
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-  }
-  a:hover{
-    background: $border-color;
-    transition: .5s;
-  }
-  .checkbtn{
-    font-size: 30px;
-    color:$backgroundColor;
-    float: right;
-    line-height: 56px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-  }
-  #check{
-    display: none;
-  }
-  @media (max-width: 952px){
-    label.logo{
-      font-size: 12px;
-      padding-left: 50px;
-    }
-    nav ul li a{
-      font-size: 16px;
-      letter-spacing: 1px;
-    }
-  }
-  @media (max-width: 858px){
-    .checkbtn{
-      display: block;
-    }
-    ul{
-      position: fixed;
-      width: 100%;
-      height: 100vh;
-      background: $liHover;
-      top: 56px;
-      left: -100%;
-      text-align: center;
-      transition: all .5s;
-      z-index: 100;
-    }
-    nav ul li{
-      display: block;
-      margin: 50px 0;
-      line-height: 30px;
-    }
-    nav ul li a{
-      font-size: 12px;
-    }
-    a:hover{
-      background: none;
-      color: $border-color;
-    }
-    #check:checked ~ ul{
-      left: 0;
-    }
-  }
-
-// action bar
-.action-bar { 
-    max-width: 1366px;
-    height: auto;
-    margin: 0 auto;
+    padding: 0 5em 0 5em;
     ul {
-    // text-align: center;
+        float: right;
+        margin-right: 20px;
+        margin-bottom: 0;
+        li {
+            display: inline-block;
+            line-height: 56px;
+            margin: 0 5px;
+            a {
+                color: $backgroundColor;
+                font-size: 17px;
+                padding: 7px 13px;
+                border-radius: 3px;
+                letter-spacing: 2px;
+                text-transform: uppercase;
+                &:hover {
+                    background: $border-color;
+                    color: $background-darker;
+                    transition: 0.5s;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
+    label.logo {
+        color: $backgroundColor;
+        font-size: 18px;
+        line-height: 56px;
+        padding: 0 100px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+    .checkbtn {
+        font-size: 30px;
+        color: $backgroundColor;
+        float: right;
+        line-height: 56px;
+        margin-right: 5px;
+        cursor: pointer;
+        display: none;
+    }
+    #check {
+        display: none;
+    }
+}
+
+// top bar
+
+#top-bar {
     width: 100%;
+    height: 70px;
+    background: $liHover;
     display: flex;
     align-items: center;
-    justify-content: center;
-
-    li {
-        width: auto;
-        display: inline-flex;
-        flex-wrap: wrap;
+    justify-content: flex-start;
+    .search-bar {
+        width: 100%;
+        position: relative;
+        display: flex;
+        align-items: center;
         justify-content: center;
-        cursor: pointer;
-        padding: 0.5em 2em;
-        font-size: 14px;
-        font-weight: 300;
-        letter-spacing: 2px;
-        .selection-button {
-            font-weight: 300;
-            letter-spacing: 2px;
-            color: $border-color;
-            line-height: 1.12em;
-            text-align: center;
-            padding: 3px 20px 3px 6px;
-            position: relative;
+        input {
+            font-size: 1rem;
+            min-width: 340px;
             width: 100%;
-            height: 42px;
-            border-radius: 0;
-            border: 1px solid $liHover;
-            border-right: none;
-            border-left: none;
-            background-color: rgba(0, 0, 0, 0);
-
-            &:after {
-                content: "";
-                color: $border-color;
-                position: absolute;
-                padding-left: 10px;
-                right: 2px;
-                top: 14px;
-                height: 11px;
-                width: 11px;
-                background-image: url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='angle-down' class='svg-inline--fa fa-angle-down fa-w-10' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='currentColor' d='M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z'%3E%3C/path%3E%3C/svg%3E");
-                background-repeat: no-repeat;
-                background-position: 50%;
-            }
+            height: 36px;
+            padding: 16px;
+            margin: 0 20px;
+            border-radius: 25px;
+            border: none;
+            background: $background-darker;
             &:focus {
                 outline: 0;
             }
-            &:hover {
-                color: $text-color-2;
-                border: 1px solid $text-color-2;
-                border-right: none;
-                border-left: none;
+        }
+        #search-icon {
+            position: absolute;
+            right: 40px;
+            border: none;
+            &:focus {
+                outline: 0;
             }
-            &:hover:after {
-                background-image: url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='angle-down' class='svg-inline--fa fa-angle-down fa-w-10' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='%23d61f1f' d='M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z'%3E%3C/path%3E%3C/svg%3E");
-                background-repeat: no-repeat;
-                background-position: 50%;
-            }
-
-            .selection-text {
-                padding-right: 8px;
-                letter-spacing: 0.3px;
-                vertical-align: middle;
-                min-height: 18px;
-                max-height: 100%;
-                overflow: hidden;
+        }
+    }
+    ul {
+        min-width: 300px;
+        padding-right: 0 20px 0 0;
+        margin: 0 20px;
+        li {
+            font-size: 16px;
+            padding: 0 20px;
+            text-decoration: none;
+            display: inline-flex;
+            flex-wrap: nowrap;
+            line-height: 50px;
+            i:hover {
+                color: white;
+            cursor: pointer;
             }
         }
     }
 }
+
+// action bar
+.action-bar {
+    max-width: 1366px;
+    margin: 0 auto;
+    padding: 1em 0 3em 0;
+    ul {
+        list-style-type: none;
+        width: 100%;
+        display: grid;
+        gap: .3em;
+        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+        grid-template-rows: auto;
+        align-content: center;
+        justify-content: center;
+        li {
+            cursor: pointer;
+            padding: 0.5em 2em;
+            font-size: 14px;
+            font-weight: 300;
+            letter-spacing: 2px;
+            .selection-button {
+                font-weight: 300;
+                letter-spacing: 2px;
+                color: $border-color;
+                line-height: 1.12em;
+                text-align: center;
+                padding: 3px 20px 3px 6px;
+                position: relative;
+                width: 100%;
+                height: 42px;
+                border-radius: 0;
+                border: 1px solid $liHover;
+                border-right: none;
+                border-left: none;
+                background-color: rgba(0, 0, 0, 0);
+
+                &:after {
+                    content: "";
+                    color: $border-color;
+                    position: absolute;
+                    padding-left: 10px;
+                    right: 2px;
+                    top: 14px;
+                    height: 11px;
+                    width: 11px;
+                    background-image: url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='angle-down' class='svg-inline--fa fa-angle-down fa-w-10' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='currentColor' d='M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z'%3E%3C/path%3E%3C/svg%3E");
+                    background-repeat: no-repeat;
+                    background-position: 50%;
+                }
+                &:focus {
+                    outline: 0;
+                }
+                &:hover {
+                    color: $text-color-2;
+                    border: 1px solid $text-color-2;
+                    border-right: none;
+                    border-left: none;
+                }
+                &:hover:after {
+                    background-image: url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='angle-down' class='svg-inline--fa fa-angle-down fa-w-10' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='%23d61f1f' d='M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z'%3E%3C/path%3E%3C/svg%3E");
+                    background-repeat: no-repeat;
+                    background-position: 50%;
+                }
+
+                .selection-text {
+                    padding-right: 8px;
+                    letter-spacing: 0.3px;
+                    vertical-align: middle;
+                    min-height: 18px;
+                    max-height: 100%;
+                    overflow: hidden;
+                }
+            }
+        }
+    }
 }
 
 .cards-section {
@@ -407,6 +426,56 @@ footer {
                 color: black;
                 cursor: pointer;
             }
+        }
+    }
+}
+
+@media (max-width: 952px) {
+    nav {
+        label.logo {
+            font-size: 12px;
+            padding-left: 50px;
+        }
+        ul {
+            li {
+                a {
+                    font-size: 16px;
+                    letter-spacing: 1px;
+                }
+            }
+        }
+    }
+}
+@media (max-width: 858px) {
+    nav {
+        .checkbtn {
+            display: block;
+        }
+        ul {
+            position: fixed;
+            width: 100%;
+            height: 100vh;
+            background: $liHover;
+            top: 56px;
+            left: -100%;
+            text-align: center;
+            transition: all 0.5s;
+            z-index: 100;
+            li {
+                display: block;
+                margin: 50px 0;
+                line-height: 30px;
+                a {
+                    font-size: 16px;
+                    &:hover {
+                        background: none;
+                        color: $border-color;
+                    }
+                }
+            }
+        }
+        #check:checked ~ ul {
+            left: 0;
         }
     }
 }
