--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 // Fonts
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;600;700&display=swap");
 // @import url("https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;700&display=swap");
 // Variables
 @import "variables";
@@ -42,7 +43,6 @@ body {
     margin: 0 auto;
 }
 
-// navbar
 nav {
     background: $text-color;
     height: 56px;
@@ -87,7 +87,6 @@ nav {
     }
 }
 
-// top bar
 #top-bar {
     height: 6em;
     background: $background-darker;
@@ -140,19 +139,64 @@ nav {
         li {
             font-size: 16px;
             padding: 0 20px;
+            position: relative;
             text-decoration: none;
-            display: inline-flex;
-            flex-wrap: nowrap;
+            display: inline-block;
             line-height: 50px;
-            i:hover {
+            text-decoration: none;
+            transition-duration: 0.5s;
+            ul {
+                background: $liHover;
+                visibility: hidden;
+                opacity: 0;
+                min-width: 12em;
+                position: absolute;
+                transition: all 0.5s ease;
+                margin-top: 0.05em;
+                left: -5em;
+                display: none;
+                &:hover {
+                    visibility: visible;
+                    opacity: 1;
+                    display: block;
+                    z-index: 103;
+                }
+                li {
+                    clear: both;
+                    width: 100%;
+                    text-align: center;
+                    padding: 0.2em 0.3em;
+                    &:hover {
+                        background: $navbar-color;
+                    }
+
+                    a {
+                        position: relative;
+                        color: $backgroundColor;
+                        line-height: 1.2rem;
+                        text-decoration: none;
+                    }
+                }
+            }
+            i {
+                transition: 0.2s;
+                opacity: 0.6;
+            }
+            &:hover {
                 color: $background-1;
+                opacity: 1;
                 cursor: pointer;
+            }
+            &:hover > ul {
+                visibility: visible;
+                opacity: 1;
+                display: block;
+                z-index: 103;
             }
         }
     }
 }
 
-// action bar
 .action-bar {
     max-width: 1366px;
     margin: 0 auto;
@@ -181,7 +225,7 @@ nav {
                 padding: 3px 20px 3px 6px;
                 position: relative;
                 width: 100%;
-                height: 42px;
+                height: 2.8em;
                 border-radius: 0;
                 border: 1px solid $liHover;
                 border-right: none;
@@ -205,8 +249,8 @@ nav {
                     outline: 0;
                 }
                 &:hover {
-                    color: $text-color-2;
-                    border: 1px solid $text-color-2;
+                    color: $background-1;
+                    border: 1px solid $background-1;
                     border-right: none;
                     border-left: none;
                 }
@@ -217,10 +261,10 @@ nav {
                 }
 
                 .selection-text {
-                    padding-right: 8px;
+                    padding-right: 0.5em;
                     letter-spacing: 0.3px;
                     vertical-align: middle;
-                    min-height: 18px;
+                    min-height: 1.1em;
                     max-height: 100%;
                     overflow: hidden;
                 }
@@ -228,8 +272,6 @@ nav {
         }
     }
 }
-
-// homepage hero section
 
 .homepage-hero {
     position: relative;
@@ -297,6 +339,7 @@ nav {
         opacity: 0.5;
     }
 }
+
 #section10 a {
     padding-top: 60px;
     span {
@@ -473,11 +516,187 @@ nav {
     }
 }
 
+.register-form {
+    background: $backgroundColor;
+    height: 100vh;
+    width: 100%;
+    display: grid;
+    justify-content: center;
+    form {
+        width: 30em;
+        padding: 6em 3em;
+        h1 {
+            margin-bottom: 2em;
+            text-align: center;
+            font-weight: 300;
+            letter-spacing: 0.1em;
+            line-height: 2em;
+        }
+        .floating-label {
+            position: relative;
+            margin-bottom: 2em;
+            .floating-input {
+                font-size: 1em;
+                padding: 0.7em 0.2em;
+                display: block;
+                width: 100%;
+                height: 2.2em;
+                background-color: transparent;
+                border: none;
+                border-bottom: 1px solid $text-color;
+            }
+
+            .floating-input:focus {
+                outline: none;
+                border-bottom: 2px solid $background-1;
+            }
+
+            label {
+                color: $liHover;
+                font-size: 1em;
+                font-weight: normal;
+                position: absolute;
+                pointer-events: none;
+                left: 0.4em;
+                top: 0.4em;
+                transition: 0.2s ease all;
+                -moz-transition: 0.2s ease all;
+                -webkit-transition: 0.2s ease all;
+            }
+
+            .floating-input:focus ~ label,
+            .floating-input:not(:placeholder-shown) ~ label {
+                top: -18px;
+                font-size: 14px;
+                color: $background-1;
+            }
+
+            .floating-input:focus ~ .bar:before,
+            .floating-input:focus ~ .bar:after {
+                width: 50%;
+            }
+
+            *,
+            *:before,
+            *:after {
+                -webkit-box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
+            }
+        }
+        .error-msg {
+            color: $text-color-2;
+            font-size: 0.8em;
+        }
+
+        .links-under {
+            padding: 0.5em 0;
+            text-align: center;
+            a {
+                color: $text-color;
+                padding: 0.2em 0.3em;
+            }
+        }
+
+        button {
+            background: $text-color;
+            color: $backgroundColor;
+            width: 100%;
+            height: 2.2em;
+            border: none;
+            letter-spacing: 0.2em;
+            text-align: center;
+            font-weight: normal;
+        }
+    }
+}
+
+.dashboard-wrapper {
+    height: 100vh;
+    background: $backgroundColor;
+    text-align: left;
+    padding: 2em 3em;
+    h1 {
+        font-size: 1.5em;
+    }
+    h3 {
+        font-size: 1.2em;
+    }
+    button {
+        background: $text-color;
+        color: $backgroundColor;
+        width: 5em;
+        height: 2.2em;
+        border: none;
+        letter-spacing: 0.2em;
+        text-align: center;
+        font-weight: normal;
+    }
+}
+
+.about-wrapper {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    background-image: url("../data/img/learn-code.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.8;
+    padding: 1em 2em;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    .about-section {
+        height: 30em;
+        width: 50em;
+        padding: 1em 5em;
+        text-align: center;
+        background: $backgroundColor;
+        h1 {
+            font-size: 3em;
+            font-weight: 300;
+            padding: 0.5em 0.5em;
+        }
+        p {
+            color: $text-color;
+            font-size: 1.2em;
+            font-weight: 300;
+            padding-bottom: 1.5em;
+            line-height: 2em;
+            letter-spacing: 0.1em;
+        }
+    }
+}
+
+.contact-us-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    .main-contact-text {
+        width: 60em;
+        padding: 1em 5em;
+        text-align: center;
+        h1 {
+            font-size: 3em;
+            font-weight: 300;
+            padding: 0.5em 0.5em;
+        }
+        h3 {
+            font-size: 2.2em;
+            padding-bottom: 1.5em;
+        }
+    }
+}
+
 footer {
     background-color: $background-darker;
     position: relative;
     padding: 2em 2em 0 2em;
-    margin-top: 2.5em;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -553,33 +772,36 @@ footer {
         background: $backgroundColor;
         border-radius: 10px;
         width: 90%;
-    }
-
-    form > input[type="email"] {
-        background: $backgroundColor;
-        padding: 0.7em;
-        border: none;
-        text-align: left;
-        width: 55%;
-        &:focus {
-            outline: none;
-        }
-    }
-    form > span {
         position: relative;
-    }
-    form > span > input[type="submit"] {
-        position: absolute;
-        padding: 0.6em;
-        background: $text-color;
-        color: $backgroundColor;
-        border: none;
-        letter-spacing: 3px;
-        line-height: 14px;
-        white-space: nowrap;
-        cursor: pointer;
-        left: 10px;
-        top: -6px;
+
+        input[type="email"] {
+            background: $backgroundColor;
+            padding: 0.7em 0.7em 0.7em 1em;
+            border: none;
+            box-sizing: border-box;
+            text-align: left;
+            width: 20em;
+            border-radius: 10px;
+            &:focus {
+                outline: none;
+            }
+        }
+        span {
+            input[type="submit"] {
+                position: absolute;
+                padding: 0.6em;
+                background: $text-color;
+                color: $backgroundColor;
+                border: none;
+                border-radius: 5px;
+                letter-spacing: 3px;
+                line-height: 14px;
+                white-space: nowrap;
+                cursor: pointer;
+                right: 1em;
+                top: 0.35em;
+            }
+        }
     }
 }
 
